[refactor/#14] Update getMemberRelatedGroups methoddue to leader management move from StudyGroup to StudyGroupMember